Fix small loader being invisible

--- a/public/css/blyrics/components.css
+++ b/public/css/blyrics/components.css
@@ -1,6 +1,7 @@
 /* Loader & Wrapper State Machine styles */
 #tab-renderer {
     position: relative;
+    container-type: size;
 }
 
 #blyrics-loader {
